Bug 129501 - Options: No possible to change separator
Summary: Options: No possible to change separator
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.5.0 target:6.4.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-12-19 16:55 UTC by Xisco Faulí
Modified: 2019-12-26 10:19 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-12-19 16:55:50 UTC
Steps to reproduce:
1. Open Calc
2. Tools - Options
3. LibreOffice Calc - Formula
4. Change any of the separators

-> Not possible to change it

Reproduced in

Version: 6.5.0.0.alpha0+
Build ID: fb1eac64df88baae9f211d052793773686c0e180
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2019-12-19 16:57:11 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=94d6fa11d086187b82adf9aa596e0f334827e095

author	Caolán McNamara <caolanm@redhat.com>	2019-09-17 12:50:05 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-09-20 21:20:51 +0200
commit 94d6fa11d086187b82adf9aa596e0f334827e095 (patch)
tree 4a44af903b2572efe89ae5e8aa67bb092644e038
parent 3c84b18f4f0fe4058de60b1c62149275ed858b79 (diff)
weld OfaTreeOptionsDialog

Bisected with: bibisect-linux64-6.4

Adding Cc: to Caolán McNamara
Comment 2 m_a_riosv 2019-12-20 01:06:44 UTC
Works for me with:
Version: 6.5.0.0.alpha0+ (x64)
Build ID: 42a1a1c6b91907f81e15066ffab219411f18c4db
CPU threads: 4; OS: Windows 10.0 Build 19041; UI render: default; VCL: win; 
Locale: es-ES (es_ES); UI-Language: en-US Calc: CL
Comment 3 Commit Notification 2019-12-20 15:02:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/aad738a6bb1155365321ac6bf119aaedd4e749ec

Resolves: tdf#129501 cannot change formula separators in options

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2019-12-20 15:03:05 UTC
fixed in master, backport to 6-4 in gerrit
Comment 5 Commit Notification 2019-12-20 21:56:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/be6b44e566050b06d80a1d2f3bdfd15dfb148fee

Resolves: tdf#129501 cannot change formula separators in options

It will be available in 6.4.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2019-12-26 10:19:03 UTC
Verified in

Version: 6.5.0.0.alpha0+
Build ID: 1abfc8e2f677024ea058e96f3133e503ba89ea02
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!