Resolves: tdf#129501 cannot change formula separators in options

Change-Id: I5cf5736f8ad3d5e28f2c31ffa88dafac59df8a8e